[gd_scene load_steps=6 format=2]

[ext_resource path="res://graphics/ui/menu/arrow.png" type="Texture" id=1]
[ext_resource path="res://scripts/ui/menu/credits.gd" type="Script" id=2]
[ext_resource path="res://scenes/ui/menu/button.tscn" type="PackedScene" id=3]
[ext_resource path="res://graphics/ui/load/studiojoh.png" type="Texture" id=4]
[ext_resource path="res://resources/font/savior1.tres" type="DynamicFont" id=5]

[node name="buttons_credits" type="Node2D"]
__meta__ = {
"_edit_lock_": true
}

[node name="button_back" parent="." instance=ExtResource( 3 )]
position = Vector2( 70, 48 )
script = ExtResource( 2 )
text = "Back"
color = Color( 0.439216, 0.439216, 0.439216, 1 )

[node name="1" type="Node2D" parent="button_back" groups=[
"page",
]]
visible = false
position = Vector2( -0.108917, -11.6483 )

[node name="label_credits_joh" type="Label" parent="button_back/1"]
margin_left = -191.0
margin_top = -109.0
margin_right = -11.0
margin_bottom = -46.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.709804, 0.972549, 0.654902, 1 )
custom_colors/font_color_shadow = Color( 0.129412, 0.0705882, 0.341176, 0.25098 )
custom_constants/shadow_offset_x = -1
custom_constants/line_spacing = -3
custom_constants/shadow_offset_y = 1
text = "Programming, Design, Art, 
Music, Voice of Announcer, 
Gotos, Vince Volt, 
and Slime Bros.
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_credits_joh2" type="Label" parent="button_back/1"]
margin_left = -238.0
margin_top = -79.0
margin_right = -58.0
margin_bottom = -26.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.501961, 1, 0.501961, 1 )
custom_colors/font_color_shadow = Color( 0.129412, 0.0705882, 0.341176, 0.501961 )
custom_constants/shadow_offset_x = -1
custom_constants/line_spacing = -3
text = "joh"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_credits_quack" type="Label" parent="button_back/1"]
margin_left = -191.0
margin_top = -63.0
margin_right = 10.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.941176, 0.768627, 1, 1 )
custom_colors/font_color_shadow = Color( 0.129412, 0.0705882, 0.341176, 0.25098 )
custom_constants/shadow_offset_x = -1
custom_constants/line_spacing = -3
custom_constants/shadow_offset_y = 1
text = "Voice of Dr. Kero 
and Don McRon,
Alt. Color Design"

[node name="label_credits_quack2" type="Label" parent="button_back/1"]
margin_left = -238.0
margin_top = -43.0
margin_right = -58.0
margin_bottom = 10.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0.632813, 1, 1 )
custom_colors/font_color_shadow = Color( 0.129412, 0.0705882, 0.341176, 0.501961 )
custom_constants/shadow_offset_x = -1
custom_constants/line_spacing = -3
text = "quack"
align = 2

[node name="label_credits_yoyo" type="Label" parent="button_back/1"]
margin_left = -191.0
margin_top = -27.0
margin_right = 10.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.764706, 0.905882, 1, 1 )
custom_colors/font_color_shadow = Color( 0.129412, 0.0705882, 0.341176, 0.25098 )
custom_constants/shadow_offset_x = -1
custom_constants/line_spacing = -3
custom_constants/shadow_offset_y = 1
text = "Voice of Yo-Yona"

[node name="label_credits_yoyo2" type="Label" parent="button_back/1"]
margin_left = -238.0
margin_top = -17.0
margin_right = -58.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.129412, 0.0705882, 0.341176, 0.501961 )
custom_constants/shadow_offset_x = -1
custom_constants/line_spacing = -3
text = "konpeitocorner"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_credits_scythe" type="Label" parent="button_back/1"]
margin_left = -191.0
margin_top = -1.0
margin_right = 10.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0.843137, 0.764706, 1 )
custom_colors/font_color_shadow = Color( 0.129412, 0.0705882, 0.341176, 0.25098 )
custom_constants/shadow_offset_x = -1
custom_constants/line_spacing = -3
custom_constants/shadow_offset_y = 1
text = "Voice of Reaper Angel"

[node name="label_credits_scythe2" type="Label" parent="button_back/1"]
margin_left = -238.0
margin_top = 9.0
margin_right = -58.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.972549, 0.576471, 0.360784, 1 )
custom_colors/font_color_shadow = Color( 0.129412, 0.0705882, 0.341176, 0.501961 )
custom_constants/shadow_offset_x = -1
custom_constants/line_spacing = -3
text = "Gabrielle \"Bambi\" Phillips"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_credits_studio" type="Label" parent="button_back/1"]
margin_left = -104.0
margin_top = -92.0
margin_right = 97.0
margin_bottom = -29.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0.129412, 0.0705882, 0.341176, 0.25098 )
custom_constants/shadow_offset_x = -1
custom_constants/line_spacing = -3
custom_constants/shadow_offset_y = 1
text = "presented by"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_credits_studio2" type="Label" parent="button_back/1"]
margin_left = -104.0
margin_top = -42.0
margin_right = 97.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0.129412, 0.0705882, 0.341176, 0.25098 )
custom_constants/shadow_offset_x = -1
custom_constants/line_spacing = -3
custom_constants/shadow_offset_y = 1
text = "studio joh
(C) 2019-2020"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logo" type="Sprite" parent="button_back/1"]
position = Vector2( -4, -60 )
texture = ExtResource( 4 )

[node name="2" type="Node2D" parent="button_back" groups=[
"page",
]]
position = Vector2( -0.108917, -11.6483 )

[node name="label_credits_announcer" type="Label" parent="button_back/2"]
margin_left = -191.0
margin_right = 36.0
margin_bottom = 63.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.968627, 0.776471, 0.45098, 1 )
custom_colors/font_color_shadow = Color( 0.129412, 0.0705882, 0.341176, 0.25098 )
custom_constants/shadow_offset_x = -1
custom_constants/line_spacing = -3
custom_constants/shadow_offset_y = 1
text = "programming and
orgainizing of hyperfight+,
          freyhoe
 
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_credits_skreamn" type="Label" parent="button_back/2"]
margin_left = -191.0
margin_top = -104.99
margin_right = 36.0
margin_bottom = -41.9899
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.964706, 0.537255, 0.537255, 1 )
custom_colors/font_color_shadow = Color( 0.129412, 0.0705882, 0.341176, 0.25098 )
custom_constants/shadow_offset_x = -1
custom_constants/line_spacing = -3
custom_constants/shadow_offset_y = 1
text = "skreamnredskull and  vernomere for their
announcer packs
[https://www.twitch.tv/skreamnredskull]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_credits_bananaberry" type="Label" parent="button_back/2"]
margin_left = -191.0
margin_top = -73.9459
margin_right = 36.0
margin_bottom = -0.945854
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.129412, 0.0705882, 0.341176, 0.25098 )
custom_constants/shadow_offset_x = -1
custom_constants/line_spacing = -3
custom_constants/shadow_offset_y = 1
text = "voice of kero unleashed, 
scientifically accurate yo-yona, 
british don, shoto go to, 
dark shoto go to, 
retro, and an announcer pack, 
bananaberry!
[https://www.youtube.com/bananaberry]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="Node2D" parent="button_back" groups=[
"page",
]]
visible = false
position = Vector2( -0.108917, -11.6483 )

[node name="label_credits_basher" type="Label" parent="button_back/3"]
margin_left = -191.0
margin_top = -109.0
margin_right = 36.0
margin_bottom = -46.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.686275, 0.45098, 0.968627, 1 )
custom_colors/font_color_shadow = Color( 0.129412, 0.0705882, 0.341176, 0.25098 )
custom_constants/shadow_offset_x = -1
custom_constants/line_spacing = -3
custom_constants/shadow_offset_y = 1
text = "suitedbasher01
for his dark goto
 
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_credits_luc" type="Label" parent="button_back/3"]
margin_left = -191.0
margin_top = -59.6636
margin_right = 36.0
margin_bottom = -40.6636
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.968627, 0.776471, 0.45098, 1 )
custom_colors/font_color_shadow = Color( 0.129412, 0.0705882, 0.341176, 0.25098 )
custom_constants/shadow_offset_x = -1
custom_constants/line_spacing = -3
custom_constants/shadow_offset_y = 1
text = "luc for his shoto goto tts"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_credits_fez" type="Label" parent="button_back/3"]
margin_left = -191.0
margin_top = -84.0
margin_right = 36.0
margin_bottom = -61.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.129412, 0.0705882, 0.341176, 0.25098 )
custom_constants/shadow_offset_x = -1
custom_constants/line_spacing = -3
custom_constants/shadow_offset_y = 1
text = "fezfan for his don mcron tts
and sheep stage pack"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_credits_petris" type="Label" parent="button_back/3"]
margin_left = -191.0
margin_top = -46.0
margin_right = 41.0
margin_bottom = -23.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.639216, 1, 0.533333, 1 )
custom_colors/font_color_shadow = Color( 0.129412, 0.0705882, 0.341176, 0.25098 )
custom_constants/shadow_offset_x = -1
custom_constants/line_spacing = -3
custom_constants/shadow_offset_y = 1
text = "PetrisDF for his voice
for vince volt [https://twitter.com/PetrisDF]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_thanks" type="Label" parent="button_back/3"]
margin_left = -191.0
margin_top = -23.0
margin_right = 36.0002
margin_bottom = 20.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.129412, 0.0705882, 0.341176, 0.25098 )
custom_constants/shadow_offset_x = -1
custom_constants/line_spacing = -3
custom_constants/shadow_offset_y = 1
text = "THANK YOU ALL FOR HELPING CREATE
THIS AMAZING MOD <3 "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="arrow_right" type="Sprite" parent="button_back"]
position = Vector2( 44, 18 )
rotation = 3.14159
scale = Vector2( 1, -1 )
texture = ExtResource( 1 )

[node name="arrow_left" type="Sprite" parent="button_back"]
position = Vector2( -36, 18 )
texture = ExtResource( 1 )

[node name="label_page" type="Label" parent="button_back"]
margin_left = -11.0
margin_top = 10.0
margin_right = 21.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.501961 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = -3
custom_constants/shadow_offset_y = 1
text = "1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
